# spdlog-discussions-2213

./: CMakeLists.txt  README.md  main.cpp
lib/: library.cpp  library.hpp
tests/: CMakeLists.txt  main.cpp
